## Process this file with automake to produce Makefile.in

SUBDIRS =      \
	po         \
	libquiver  \
	data \
	src        

quiverdocdir = ${datadir}/doc/quiver

quiverdoc_DATA = \
	README\
	COPYING\
	AUTHORS\
	ChangeLog\
	INSTALL\
	NEWS

EXTRA_DIST = $(quiverdoc_DATA) \
     intltool-extract.in \
	 intltool-merge.in \
	 intltool-update.in

